# xp3-pack-unpack

./: Cargo.toml  LICENSE  README.md  readme.md  rustfmt.toml
.github/workflows/: release.yml
audio-speedup/: Cargo.toml
audio-speedup/src/: main.rs
ogg-batch-speedup/: Cargo.toml  README.md  README.zh-CN.md
ogg-batch-speedup/src/: lib.rs
src/: log_utils.rs  main.rs
xp3-audio-speedup/: Cargo.toml
xp3-audio-speedup/src/: main.rs
xp3-pack-unpack/: Cargo.toml
xp3-pack-unpack/src/: lib.rs  main.rs
