[package]
edition = "2024"
name    = "xp3-audio-speedup"
version = "0.1.2"

[dependencies]
anyhow   = "1.0.97"
assert2  = "0.3.15"
clap     = { version = "4.4", features = ["derive"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
rayon    = "1.10.0"
tempfile = "3.8"
walkdir  = "2.4"
xp3      = "0.3.0"

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"
strip     = true
