[package]
edition = "2024"
name    = "xp3-audio-speedup"
version = "0.2.0"

[dependencies]
anyhow            = "1.0"
assert2           = "0.3"
clap              = { version = "4.4", features = ["derive"] }
log               = "0.4"
ogg-batch-speedup = { path = "../ogg-batch-speedup" }
pretty_env_logger = "0.5"
tempfile          = "3.8"
walkdir           = "2.4"
xp3               = "0.3"
